src/objects/ApplicationAssociation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Application Associations</relationshipLabel>
        <relationshipName>Application_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Application Associations</relationshipLabel>
        <relationshipName>Application_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Petitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beneficiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Application Association</label>
    <nameField>
        <label>Application Association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>